--- a/15-code-coverage/15-code-coverage.tex
+++ b/15-code-coverage/15-code-coverage.tex
@@ -134,6 +134,8 @@ assert fibonacci(10) == 55;
 
 \pitch{\pptQuote{../06-coupling/martin-fowler.jpg}{I would be suspicious of anything like 100\% --- it would smell of someone writing tests to make the coverage \emph{numbers happy}, but not thinking about what they are doing.}{Martin Fowler, \href{https://martinfowler.com/bliki/TestCoverage.html}{\textit{Test Coverage}}, 1997}}
 
+\pitch{\pptQuote{cem-kaner.jpg}{As you get near 100 percent line coverage, that doesn't tell you the product is near release. It just tells you that the product is no longer obviously far from release according to this measure.}{\emph{Cem Kaner}, James Bach, Bret Pettichord, \textit{Lessons Learned in Software Testing: A Context-Driven Approach}, 2002}}
+
 \pitch{\pptQuote{pavneet-singh-kochhar.jpg}{Our results show that coverage has an \emph{insignificant correlation} with the number of bugs that are found after the release of the software at the project level, and \emph{no such correlation} at the file level.}{\textit{Code Coverage and Postrelease Defects: A Large-Scale Study on Open Source Projects}, Pavneet Singh Kochhar, David Lo, Julia Lawall, Nachiappan Nagappan, IEEE Transactions on Reliability, 66(4), 2017}}
 
 \pitch{\pptQuote{goran-petrovic.jpg}{Google \emph{does not enforce} any code coverage thresholds across the entire codebase. Projects (or groups of projects) are free to define their own thresholds and goals. Many projects opt-into a centralized voluntary alerting system that defines \emph{five levels} of code coverage thresholds.}{\textit{Code Coverage at Google}, \emph{Goran Petrovi{\'c}}, Marko Ivankovi{\'c}, Ren{\'e} Just, Gordon Fraser, Proceedings of the 27th Joint Meeting on ESEC/FSE, 2019}}
