--- a/15-code-coverage/15-code-coverage.tex
+++ b/15-code-coverage/15-code-coverage.tex
@@ -125,6 +125,22 @@ assert foo(50) == 42;
 
 \pitch{\pptQuote{william-elmendorf.jpg}{A disciplined test control process is composed of five steps: 1) establish the intended extent of testing; 2) create a list of functional \emph{variations} eligible for testing; 3) rank and subset the \emph{eligible} variations so that test resources can be directed at those with the higher payoff; 4) calculate the \emph{test coverage} of the test case library; and 5) verify attainment of the \emph{planned} test coverage.}{William Robert Elmendorf, \textit{Controlling the Functional Testing of an Operating System}, IEEE Transactions on Systems Science and Cybernetics, 5(4), 1969}}
 
+\pitch{\pptQuote{david-gelperin.jpg}{However, only half regularly document their test designs, only half regularly save their tests for reuse after software changes, and an extremely small five percent provide regular measurements of code coverage.}{\textit{The Growth of Software Testing}, \emph{David Gelperin} and Bill Hetzel, Communications of the ACM, 31(6), 1988}}
+
+\plush{
+\begin{multicols}{2}
+\includegraphics[width=.7\linewidth]{practices.png}
+\par\columnbreak\par
+``We note an \emph{inconsistency}. A high percentage of the respondents
+felt that the testing in their organization was a systematic
+and organized activity (91\% answered either ``yes''
+or ``sometimes'' to this practice). However, [...]
+an extremely small 5\% provide \emph{regular
+measurements of code coverage}.''\par
+{\scriptsize --- \textit{The Growth of Software Testing}, David Gelperin and Bill Hetzel, Communications of the ACM, 31(6), 1988\par}
+\end{multicols}
+}
+
 \pitch{\pptQuote{boris-beizer.jpg}{Junky software takes more tests to achieve coverage, but it breaks under any systematic test.}{\textit{Black Box Testing}, Boris Beizer, 1995}}
 
 \pitch{\pptQuote{brian-marick.jpg}{Coverage numbers (like many numbers) are dangerous because they're \emph{objective} but \emph{incomplete}. They too often distort sensible action. Using them in isolation is as foolish as hiring based only on GPA.}{Brian Marick, \href{http://www.exampler.com/testing-com/writings/coverage.pdf}{\textit{How to Misuse Code Coverage}}, 1997}}
